<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/mobile"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/mobile"/>
    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="Clicked"
        android:text="@string/load"/>
    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="Clicked"
        android:text="@string/save"/>
</RelativeLayout>
