<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    tools:context="com.example.andrewtakao.testapp.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/text_input_button"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/button_text"
        android:onClick="textInputActivity"
        android:text="@string/text_input_activity" />

    <Button
        android:id="@+id/auto_complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_toRightOf="@+id/text_input_button"
        android:layout_toEndOf="@+id/text_input_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:textSize="@dimen/button_text"
        android:onClick="autoCompleteActivity"
        android:text="@string/auto_complete_activity" />
    <Button
        android:id="@+id/checkbox_button"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/button_text"
        android:onClick="checkboxActivity"
        android:text="@string/checkbox_activity" />
    <Button
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_button"
        android:layout_toRightOf="@+id/checkbox_button"
        android:layout_toEndOf="@+id/checkbox_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/button_text"
        android:maxLines="1"
        android:onClick="toggleButtonActivity"
        android:text="@string/toggle_button_activity" />
    <Button
        android:id="@+id/spinner"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/button_text"
        android:onClick="spinnerActivity"
        android:text="@string/spinner_activity" />
    <Button
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_button"
        android:layout_toRightOf="@+id/spinner"
        android:layout_toEndOf="@id/spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/button_text"
        android:onClick="listviewActivity"
        android:text="@string/listview_activity" />
    <Button
        android:id="@+id/time_picker"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/button_text"
        android:onClick="timePickerActivity"
        android:text="@string/time_picker_activity" />

</RelativeLayout>
